--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Contact_List_App</string>
+    <string name="contact_list">CONTACT LIST</string>
 </resources>
